# automaited-python

./: README.md  pyproject.toml
src/automaited/: __init__.py
